# my-website

./: .replit  app.py  marks.html  pyproject.toml  replit.md
.local/state/replit/agent/: .latest.json
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-I-am-building-a-Flask-based-Academic-Portal-web-app-The-goal-is-to-have-a-fully-functional-Faculty--1758781932551_1758781932554.txt
instance/: scaler.pkl  student_prediction.db  student_risk_model.pkl
static/css/: custom.css
static/js/: custom.js
templates/: admin_dashboard.html  base.html  create_assignment.html  create_exam.html  edit_assignments.html  edit_exam.html  edit_student_marks.html  faculty_dashboard.html  generate_report.html  index.html  login.html  manage_assignments.html  manage_timetable.html  mentor_dashboard.html  register.html  send_email.html  student_dashboard.html  upload.html
